src/test/ui/feature-gates/feature-gate-infer_static_outlives_requirements.stderr
error[E0310]: the parameter type `U` may not live long enough
  --> $DIR/feature-gate-infer_static_outlives_requirements.rs:5:5
   |
LL | struct Foo<U> {
   |            - help: consider adding an explicit lifetime bound `U: 'static`...
LL |     bar: Bar<U>
   |     ^^^^^^^^^^^
   |
note: ...so that the type `U` will meet its required lifetime bounds
  --> $DIR/feature-gate-infer_static_outlives_requirements.rs:5:5
   |
LL |     bar: Bar<U>
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
